May_20 MeetingApp Issues Fix

--- a/src/app/location/location-list/location-list.component.css
+++ b/src/app/location/location-list/location-list.component.css
@@ -56,3 +56,9 @@
   max-height: 91vh;
   padding-bottom: 20px;
 }
+
+.ionItem {
+  left: -18px;
+  height: 250px;
+  top: 1px;
+}
