--- a/src/app/meeting/my-meetings/my-meetings.component.css
+++ b/src/app/meeting/my-meetings/my-meetings.component.css
@@ -24,6 +24,5 @@
 }
 
 .dateCSS {
-  margin-left: 20px;
-  margin-right: 19px;
+  margin-right: 16px;
 }
